2009-06-02	Eric Norum <norume@aps.anl.gov>

	PR 1420/bsps
	* startup/bspstart.c: Turn off buffered writes.

2009-03-02	Till Straumann <strauman@slac.stanford.edu>

	PR 1375/bsps
	* clock/clock.c: Correct implementation of nanoseconds since last tick
	handler.

2009-01-21	Eric Norum <norume@aps.anl.gov>

	PR 1358/bsps
	* clock/clock.c: Fix time-access bug in uc5282 BSP.

2008-12-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Backport from CVS-HEAD.

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* timer/timer.c: Convert to "bool".

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Eliminate empty function from every benchmark timer
	driver. Fix spelling.

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Rename timer driver methods to follow RTEMS
	programming conventions.

2008-05-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* console/console.c: Eliminate copies of switches to convert termios
	Bxxx constants to xxx as an integer. Use the shared
	termios_baud_to_number() routine to do the same conversion.

2008-05-19	Eric Norum <norume@aps.anl.gov>

	* Makefile.am, configure.ac, startup/bspstart.c, startup/linkcmds: Back
	out changes from 2008-05-16 -- they don't seem to work.

2008-05-16	Eric Norum <norume@aps.anl.gov>

	* Makefile.am, configure.ac, startup/bspstart.c, startup/linkcmds: Use
	shared version of bootstrap to set up workspace.

2008-05-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Rework to avoid .rel files.

2008-05-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Refactored and renamed initialization routines to
	rtems_initialize_data_structures, rtems_initialize_before_drivers,
	rtems_initialize_device_drivers, and
	rtems_initialize_start_multitasking. This opened the sequence up so
	that bootcard() could provide a more robust and flexible framework
	which is easier to explain and understand. This also lays the