@@ -1,3 +1,11 @@
+2009-07-28  Eric Norum <norume@aps.anl.gov>
+
+   PR 1420/bsps
+   * startup/bspstart.c: Turn on buffered writes to DRAM. As Device Errata
+      SECF124 notes this may cause double writes, but that's not really a big
+      problem and benchmarking tests have shown that buffered writes do gain
+      some performance.
+
 2009-06-02	Eric Norum <norume@aps.anl.gov>
 
 	PR 1420/bsps
